Changes to OpenAiEmbeddingClient to get Graal VM compiled