@@ -1,41 +1,56 @@
 package io.stargate.sgv2.jsonapi.service.embedding.operation;
 
-import dev.ai4j.openai4j.OpenAiClient;
-import dev.ai4j.openai4j.embedding.EmbeddingRequest;
-import dev.ai4j.openai4j.embedding.EmbeddingResponse;
+import io.quarkus.rest.client.reactive.QuarkusRestClientBuilder;
+import jakarta.ws.rs.HeaderParam;
+import jakarta.ws.rs.POST;
+import jakarta.ws.rs.Path;
+import java.net.URI;
+import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
+import org.eclipse.microprofile.rest.client.annotation.ClientHeaderParam;
+import org.eclipse.microprofile.rest.client.inject.RegisterRestClient;
 
 public class OpenAiEmbeddingClient implements EmbeddingService {
+  private String apiKey;
   private String modelName;
-  OpenAiClient client;
+  private String baseUrl;
+  private final OpenAiEmbeddingService embeddingService;
 
   public OpenAiEmbeddingClient(String baseUrl, String apiKey, String modelName) {
+    this.apiKey = apiKey;
     this.modelName = modelName;
-    client = OpenAiClient.builder().openAiApiKey(apiKey).baseUrl(baseUrl).build();
+    this.baseUrl = baseUrl;
+    embeddingService =
+        QuarkusRestClientBuilder.newBuilder()
+            .baseUri(URI.create(baseUrl))
+            .build(OpenAiEmbeddingService.class);
   }
 
   public OpenAiEmbeddingClient(String apiKey, String modelName) {
-    this("https://api.openai.com/v1/", apiKey, modelName);
+    this("https://api.openai.com/v1", apiKey, modelName);
   }
 
+  @RegisterRestClient
+  public interface OpenAiEmbeddingService {
+    @POST
+    @Path("/embeddings")
+    @ClientHeaderParam(name = "Content-Type", value = "application/json")
+    EmbeddingResponse embed(
+        @HeaderParam("Authorization") String accessToken, EmbeddingRequest request);
+  }
+
+  private record EmbeddingRequest(String[] input, String model) {}
+
+  private record EmbeddingResponse(String object, Data[] data, String model, Usage usage) {
+    private record Data(String object, int index, float[] embedding) {}
+    private record Usage(int prompt_tokens, int total_tokens) {}
+  }
+
+  @Override
   public List<float[]> vectorize(List<String> texts) {
-    EmbeddingRequest request = EmbeddingRequest.builder().input(texts).model(modelName).build();
-    EmbeddingResponse response = execute(request);
-    return response.data().stream()
-        .map(openAiEmbedding -> openAiEmbedding.embedding())
-        .map(
-            embedding -> {
-              float[] vector = new float[embedding.size()];
-              for (int i = 0; i < embedding.size(); i++) {
-                vector[i] = embedding.get(i).floatValue();
-              }
-              return vector;
-            })
-        .collect(Collectors.toList());
-  }
-
-  private EmbeddingResponse execute(EmbeddingRequest request) {
-    return client.embedding(request).execute();
+    String[] textArray = new String[texts.size()];
+    EmbeddingRequest request = new EmbeddingRequest(texts.toArray(textArray), modelName);
+    EmbeddingResponse response = embeddingService.embed("Bearer " + apiKey, request);
+    return Arrays.stream(response.data()).map(data -> data.embedding()).toList();
   }
 }
